--- a/src/assets/style/blocks/_header.scss
+++ b/src/assets/style/blocks/_header.scss
@@ -165,6 +165,10 @@ header {
       left: 0;
     }
 
+    .pagesContainer,.mobileFooter {
+      background-color: $darkViolet;
+      box-shadow: $shadowTop;
+    }
     .pagesContainer {
       position: fixed;
       bottom: -1px;
@@ -175,8 +179,6 @@ header {
       width: 100%;
       height: 80px;
       padding: 6px 5vw;
-      background-color: $darkViolet;
-      box-shadow: $shadowTop;
 
       .headerLink {
         display: flex;
@@ -197,6 +199,13 @@ header {
           font-size: 20px;
           text-align: center;
         }
+      }
+      .btnMore {
+        position: relative;
+        top: -5px;
+        padding: 5px 10px;
+        font-size: 20px;
+        margin-left: 10px;
       }
     }
   }
@@ -324,7 +333,7 @@ body.inkline.-light header {
     color: $black;
   }
 
-  .pagesContainer {
+  .pagesContainer,.mobileFooter {
     @media screen and (max-width: $mobile) {
       background-color: $white;
     }
