--- a/src/assets/style/blocks/_loggingInLoader.scss
+++ b/src/assets/style/blocks/_loggingInLoader.scss
@@ -14,6 +14,10 @@
   overflow: hidden;
   background: white;
   animation-fill-mode: forwards;
+  transition-delay: 0.35s;
+  &.fade-leave-active {
+    transition-delay: 0.5s;
+  }
 
   .headerWrapper {
     position: relative;
@@ -43,6 +47,23 @@
   .hint {
     margin-bottom: 0;
     font-size: 18px;
+    position: relative;
+    height: 20px;
+    width: 100%;
+    margin-top: 1rem;
+    text-align: center;
+
+    & > div {
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: auto;
+    }
+
+    .green {
+      color: $green;
+    }
   }
 
   .cancelButton {
