--- a/src/assets/style/pages/_account.scss
+++ b/src/assets/style/pages/_account.scss
@@ -157,10 +157,11 @@
 
               .total {
                 text-align: center;
+                margin-bottom: 0.4rem;
 
-                .balancePrice {
+                /* .balancePrice {
                   display: block;
-                }
+                } */
               }
             }
           }
