--- a/src/assets/style/blocks/_onboard.scss
+++ b/src/assets/style/blocks/_onboard.scss
@@ -19,7 +19,7 @@
   .bn-onboard-select-wallet-info {
     color: $lightViolet !important;
     font: normal 16px $firaSans !important;
-    letter-spacing: -.01rem !important;
+    letter-spacing: -0.01rem !important;
     text-decoration: none !important;
 
     &:hover {
@@ -49,12 +49,12 @@
       padding-bottom: 1rem !important;
 
       header.bn-onboard-modal-content-header {
-        margin: 1rem 0 .25rem;
+        margin: 1rem.25rem;
       }
 
       .bn-onboard-select-info-container {
-        margin: .25rem 0 !important;
-        padding: .75rem 0 .25rem !important;
+        margin: 0.25rem 0 !important;
+        padding: 0.75rem.25rem !important;
         display: flex;
         align-items: center;
 
@@ -65,15 +65,15 @@
 
       p.bn-onboard-select-description {
         padding: 0 0 1rem;
-        border-bottom: .5px solid $lightViolet;
-        margin: 0 0 .5rem;
+        border-bottom: 0.5px solid $lightViolet;
+        margin: 0.5rem;
         display: block;
       }
 
       p.bn-onboard-select-wallet-definition {
         display: block;
         margin: 0;
-        padding: 0 0 .25rem;
+        padding: 0.25rem;
         transition: all $transition2;
       }
     }
@@ -103,7 +103,7 @@
   }
 
   .bn-onboard-selected-wallet {
-    background-color: transparentize($color: $gray, $amount: .95) !important;
+    background-color: transparentize($color: $gray, $amount: 0.95) !important;
     box-shadow: 0 0 0 1.5px $violet !important;
 
     &:hover {
@@ -164,14 +164,13 @@
 
   @media screen and (max-width: $mobile) {
     button.bn-onboard-modal.bn-onboard-modal-content {
-      margin: .25rem 0;
-      padding: .5rem;
+      margin: 0.25rem 0;
+      padding: 0.5rem;
     }
 
     .bn-onboard-select-wallet-definition {
       margin-top: 0.8em !important;
     }
-
 
     .bn-onboard-modal-content {
       header.bn-onboard-custom.bn-onboard-modal-content-header {
@@ -188,9 +187,9 @@
       }
 
       .bn-onboard-custom.bn-onboard-select-info-container {
-        margin: 1rem 0 .5rem;
-        padding: .75rem 0 .5rem;
-        border-top: .5px solid $lightViolet;
+        margin: 1rem.5rem;
+        padding: 0.75rem.5rem;
+        border-top: 0.5px solid $lightViolet;
       }
 
       .bn-onboard-modal-content-close {
@@ -198,8 +197,8 @@
       }
 
       .bn-onboard-custom.bn-onboard-icon-button {
-        margin: .25em;
-        padding: .25em;
+        margin: 0.25em;
+        padding: 0.25em;
       }
     }
   }
