--- a/src/assets/style/pages/_index.scss
+++ b/src/assets/style/pages/_index.scss
@@ -31,7 +31,7 @@
       h1 {
         max-width: 350px;
         line-height: 35px;
-        margin-bottom: .25rem;
+        margin-bottom: 0.25rem;
       }
     }
   }
