--- a/src/assets/style/layouts/_default.scss
+++ b/src/assets/style/layouts/_default.scss
@@ -18,7 +18,7 @@
     margin-left: auto;
     padding: 20px;
     border-radius: $borderRadius;
-    box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, .02);
+    box-shadow: 4px 4px 8px 0 rgba(11, 52, 102, 0.02);
     transition: background-color $transition1;
 
     .tileHeadline {
@@ -63,15 +63,15 @@
         margin-left: 10px;
         font-size: 11px;
         line-height: 26px;
-        background: transparentize($color: $gray, $amount: .7);
+        background: transparentize($color: $gray, $amount: 0.7);
         border-radius: 50%;
         transform: translateY(1px);
         cursor: pointer;
-        opacity: .9;
+        opacity: 0.9;
         transition: background-color $transition1;
 
         &:hover {
-          background: transparentize($color: $gray, $amount: .5);
+          background: transparentize($color: $gray, $amount: 0.5);
         }
       }
 
@@ -107,7 +107,6 @@
   }
 
   footer {
-
     @media (max-width: $mobile) {
       margin-bottom: $footerHeight; /* Navigation bar space */
 
@@ -164,12 +163,12 @@ body.inkline.-dark {
 input.form-input.-prefixed {
   background-color: $input-border-color-light !important;
   border-radius: $borderRadiusSm;
-  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, .035) !important;
+  box-shadow: inset 1px 1px 3px rgba(0, 0, 0, 0.035) !important;
 }
 
 .form-input-group.-light .form-input input:focus,
 input.form-input.-prefixed:focus {
-  border-color: rgba(30, 30, 30, .15) !important;
+  border-color: rgba(30, 30, 30, 0.15) !important;
 }
 
 .tooltip-wrapper {
@@ -185,14 +184,14 @@ em.iconInfo {
   font-size: 11px;
   line-height: 26px;
   text-align: center;
-  background: transparentize($color: $gray, $amount: .7);
+  background: transparentize($color: $gray, $amount: 0.7);
   border-radius: 50%;
   transform: translateY(1px);
   cursor: pointer;
-  opacity: .9;
+  opacity: 0.9;
   transition: background-color $transition1;
 
   &:hover {
-    background: transparentize($color: $gray, $amount: .5);
+    background: transparentize($color: $gray, $amount: 0.5);
   }
 }
