--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -27,7 +27,7 @@ $tempTransparent: transparent;
 /* Bg */
 $accentBg: transparentize(
   $color: $gray,
-  $amount: .95,
+  $amount: 0.95,
 );
 $bgLight: #fbfbfb;
 $bgSecondary: #ffffff10;
@@ -58,12 +58,12 @@ $firaCode: "Fira Code", "sans-serif";
 $font-family-primary-base: $firaSans;
 
 /* Transitions */
-$transition1: .2s ease;
-$transition2: .3s ease;
+$transition1: 0.2s ease;
+$transition2: 0.3s ease;
 
 /* Border-radius */
 $borderRadiusXs: 6.6px;
-$borderRadiusSm: .25rem;
+$borderRadiusSm: 0.25rem;
 $borderRadiusMd: 4px;
 $borderRadius: 8px;
 $borderRadiusBig: 16px;
@@ -84,11 +84,11 @@ $biggestWidth: 1920px;
 $fontSizeRegular: 14px;
 
 /* Shadow colors */
-$shadowColor3: #00000007; //rgba(0, 0, 0, 0.03);
-$shadowColor4: #0000000a; //rgba(0, 0, 0, 0.04);
-$shadowColor5: #0000000c; //rgba(0, 0, 0, 0.05);
-$shadowColor8: #00000015; //rgba(0, 0, 0, 0.08);
-$shadowColor10: #0000001a; //rgba(0, 0, 0, 0.10);
+$shadowColor3: #00000007; //rgba(0, 0, 0, .03);
+$shadowColor4: #0000000a; //rgba(0, 0, 0, .04);
+$shadowColor5: #0000000c; //rgba(0, 0, 0, .05);
+$shadowColor8: #00000015; //rgba(0, 0, 0, .08);
+$shadowColor10: #0000001a; //rgba(0, 0, 0, .10);
 
 /* Shadows */
 $shadowInset: inset 1px 1px 1px $shadowColor3;
@@ -99,5 +99,5 @@ $inputContainerShadow: 0 2px 4px $shadowColor4, 0 4px 6px $shadowColor4;
 $hoverShadow: 0 4px 8px $shadowColor8;
 $defaultShadow: 0 4px 4px $shadowColor8;
 $layerShadow: 0 1px 5px 0 $shadowColor10;
-$tileShadow: 0 1px .5px $shadowColor10;
+$tileShadow: 0 1px 0.5px $shadowColor10;
 $modeShadow: 0 3px 5px -1px $shadowColor8, 0 6px 10px 0 $shadowColor10, 0 1px 18px 0 $shadowColor10;
