refactor(structure): merged part #1 of 4 from keriat-zkf-486-design-issues + changes
# Changelog

## 1. UI/UX fixes for the mobile devices in portrait mode

Special _mobile-layout.scss. But investing into the ui more is useless since we're moving to the Tailwind

The optimisation was done only for the portrait-mode / width from 320px to 450px
Changes done listed below:

 * index page (non-logged users see it) scaled to fit screen with no scrolls
 * loggin-in status centered and optimized
 * select wallet / provider popup optimized and scaled for different cases (opened, closed etc.)
 * confirmation / rejection popups unified and fixed
 * wallet inside got fixed layout (but it's a matter of the next iteration) — anyway now it's fully adapting the device's height
 * layout-tags unified and optimized (and inside the merge too)

## 2. Merging in process with the ```keriat-zkf-486-design-issuesz```, most relevant but too-changed (_breaking some well-worked flows_). Some sneak-peek of the merge:
 * Types moved to the separate folder src/types and stated in the packages.json
 * firebase updated as well as the rinkeby-beta flow
 * environments updated
 * directory .ide-setup created for the future dev-template-package
 * constants updated and unified

> ...to be continued: it's a #1 merge of 4

BREAKING CHANGE: #ZKF-505, #ZKF-541, #ZKF-493, #ZKF-506, #ZKF-540, #ZKF-536, #ZKF-502, #ZKF-498, #ZKF-497, #ZKF-496

Closes #ZKF-505

--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -1,3 +1,5 @@
+$colorLightGray: #e9ecef;
+
 footer {
   img {
     -webkit-user-select: none;
@@ -13,7 +15,7 @@ footer {
   @media screen and (min-width: 1201px) {
     .container {
       width: calc(100vw - 34px);
-      max-width: 1920px;
+      max-width: $biggestWidth;
     }
   }
 
@@ -21,7 +23,7 @@ footer {
     width: 100%;
 
     .row {
-      font-size: 14px !important;
+      font-size: $fontSizeRegular !important;
     }
 
     & > div {
@@ -32,10 +34,10 @@ footer {
   }
 
   a {
-    font-size: 14px;
+    font-size: $fontSizeRegular;
 
     @media (max-width: $mobile) {
-      font-size: 14px;
+      font-size: $fontSizeRegular;
     }
 
     &:hover {
@@ -52,27 +54,6 @@ footer {
     height: auto;
   }
 
-  .poweredBy {
-    display: flex;
-    align-items: center;
-    color: $violet;
-    text-transform: uppercase;
-    text-decoration: none;
-
-    .headerWrapper {
-      width: max-content;
-      margin: 0 10px;
-      padding: 0 !important;
-
-      .projectLogo {
-        width: 127px !important;
-        height: 30px;
-        margin: 0 !important;
-        transform: translateY(-2px);
-      }
-    }
-  }
-
   .floating-on-mobile {
     transform: translateY(-5px);
   }
@@ -80,16 +61,20 @@ footer {
   @media (max-width: 992px) {
     .floating-on-mobile {
       position: fixed;
-      right: 8vw;
-      bottom: 4vh;
       width: 2.5rem !important;
       height: 2.5rem !important;
       padding: 0;
       border-radius: 100%;
-      box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.08), 0 6px 10px 0 rgba(0, 0, 0, 0.1), 0 1px 18px 0 rgba(0, 0, 0, 0.1);
+      box-shadow: $tileShadow;
 
-      @media (min-width: $mobile) {
-        bottom: 80px;
+      &:hover {
+        box-shadow: $hoverShadow;
+      }
+
+      @media (max-width: $mobile) {
+        right: 8vw;
+        bottom: 6rem;
+        //bottom: 80px;
       }
     }
   }
@@ -99,7 +84,7 @@ footer {
   footer {
     a {
       color: $violet !important;
-      font-size: 14px;
+      font-size: $fontSizeRegular;
 
       &:hover {
         color: $lightViolet !important;
@@ -136,6 +121,6 @@ footer {
 .inkline.-dark {
   footer > .container .badge {
     color: $darkerGray;
-    background: #e9ecef;
+    background: $colorLightGray;
   }
 }
