--- a/src/assets/style/_default.scss
+++ b/src/assets/style/_default.scss
@@ -1,11 +1,11 @@
-#__nuxt,
-#__layout,
-.layoutContent,
-.defaultLayout {
-  width: 100%;
-  height: max-content;
-  min-height: 100vh;
-}
+//#__nuxt,
+//#__layout,
+//.layoutContent,
+//.defaultLayout {
+//  width: 100%;
+//  height: max-content;
+//  min-height: 100vh;
+//}
 
 #nuxt-loading {
   background-color: $darkViolet !important;
@@ -72,7 +72,7 @@ body.inkline {
       padding: 7px 12px;
       color: $lightViolet !important;
       text-decoration: none !important;
-      border-radius: 4px;
+      border-radius: $borderRadiusSm;
     }
     &.-secondary {
       &:disabled {
@@ -136,7 +136,7 @@ button.-lg.-circle {
 
 .popover {
   border: none !important;
-  border-radius: 10px !important;
+  border-radius: $borderRadius !important;
   box-shadow: $popoverShadow;
   opacity: 0.975;
 
@@ -224,7 +224,7 @@ button.-lg.-circle {
     > .header {
       font-weight: 400;
       font-size: 1.5rem;
-      font-family: $firaSansExtra;
+      font-family: $firaSans;
 
       & > .close {
         width: 2.2rem !important;
@@ -264,7 +264,7 @@ button.-lg.-circle {
     }
 
     & > div:last-child {
-      border-radius: 0 0 8px 8px;
+      border-radius: 0 0 $borderRadius $borderRadius;
     }
   }
 
@@ -301,7 +301,7 @@ button.-lg.-circle {
   .header {
     border-bottom: none !important;
   }
-  
+
   .modalFooterBtn {
     display: flex;
     flex-wrap: nowrap;
@@ -333,7 +333,7 @@ button.-lg.-circle {
     }
 
     span {
-      font-size: 14px;
+      font-size: $fontSizeRegular;
       text-align: left;
     }
   }
@@ -372,7 +372,8 @@ button.-lg.-circle {
       background-color: transparent !important;
 
       &:hover {
-        background-color: rgba(0, 0, 0, 0.01961) !important;
+        //background-color: rgba(0, 0, 0, 0.01961) !important;
+        background-color: $shadowColor3 !important;
       }
     }
   }
@@ -390,7 +391,12 @@ button.-lg.-circle {
     }
 
     .form-input-append {
-      background-color: transparent !important;
+      background-color: $mediumViolet !important;
+
+      &:hover {
+        background-color: $darkMain !important;
+        color: $light;
+      }
     }
   }
 
