--- a/src/assets/style/blocks/_chooseToken.scss
+++ b/src/assets/style/blocks/_chooseToken.scss
@@ -35,7 +35,8 @@
         align-items: center;
         justify-content: center;
 
-        em, i {
+        em,
+        i {
           font-size: 1.2rem;
         }
       }
@@ -56,13 +57,13 @@
     }
 
     &::-webkit-scrollbar-thumb {
-      border-radius: 10px;
+      border-radius: $borderRadius;
       cursor: pointer;
     }
 
     &::-webkit-scrollbar-track {
       background-color: $tempTransparent;
-      border-radius: 10px;
+      border-radius: $borderRadius;
     }
 
     .tokenItem {
@@ -78,6 +79,10 @@
       @media screen and (max-width: $mobile) {
         height: 74px !important;
         padding: 7px 20px !important;
+        //display: flex;
+        //flex-direction: row;
+        //padding: 5px 10px !important;
+        //height: 60px !important;
       }
 
       &:hover {
@@ -125,7 +130,6 @@ body.inkline {
     }
     .searchContainer {
       .updateBtn {
-
       }
     }
   }
