--- a/src/assets/style/vars/_variables.scss
+++ b/src/assets/style/vars/_variables.scss
@@ -3,6 +3,7 @@ $white: #fff;
 $light: #e1e4e8;
 $gray: #9eaebb;
 $black: #242424;
+$blackViolet: #121429;
 $violet: #4e529a;
 $green: #1d9b4a;
 $darkViolet: #171a49; //MajorDark
@@ -29,6 +30,7 @@ $accentBg: transparentize(
   $amount: 0.95,
 );
 $bgLight: #fbfbfb;
+$bgSecondary: #ffffff10;
 
 /* Input */
 $input-prefix-border-width: 0;
@@ -52,7 +54,6 @@ $modal-background-light: $white;
 /* Fonts */
 $firaSans: "Fira Sans", "sans-serif";
 $firaCode: "Fira Code", "sans-serif";
-$firaSansExtra: "Fira Sans Extra Condensed", "sans-serif";
 
 $font-family-primary-base: $firaSans;
 
@@ -63,25 +64,40 @@ $transition2: 0.3s ease;
 /* Border-radius */
 $borderRadiusXs: 6.6px;
 $borderRadiusSm: 0.25rem;
+$borderRadiusMd: 4px;
 $borderRadius: 8px;
 $borderRadiusBig: 16px;
 
 /* Blocks */
 $headerHeight: 80px;
-$minRouteHeight: calc(100vh - 82px - 105px);
-$minRouteHeightMain: calc(100vh - 82px - 105px);
+$footerHeight: 85px;
+$minRouteHeight: calc(100vh - 85px - 85px);
+$minRouteHeightMain: calc(100vh - 85px - 85px);
+$minRouteHeightWithExtra: calc(100vh - 200px);
 
 /* Responsive */
 $mobile: 768px;
 $maxWidth: 1370px;
+$biggestWidth: 1920px;
+
+/* Font sizes */
+$fontSizeRegular: 14px;
+
+/* Shadow colors */
+$shadowColor3: #00000007; //rgba(0, 0, 0, .03);
+$shadowColor4: #0000000a; //rgba(0, 0, 0, .04);
+$shadowColor5: #0000000c; //rgba(0, 0, 0, .05);
+$shadowColor8: #00000015; //rgba(0, 0, 0, .08);
+$shadowColor10: #0000001a; //rgba(0, 0, 0, .10);
 
 /* Shadows */
-$shadowInset: inset 1px 1px 1px rgba(0, 0, 0, 0.03);
-$popoverShadow: 0 10px 40px rgba(0, 0, 0, 0.05);
-$shadowTop: 0 -3px 10px rgba(0, 0, 0, 0.05);
-$shadowBottom: 0 3px 10px rgba(0, 0, 0, 0.05);
-$inputContainerShadow: 0 2px 4px rgba(0, 0, 0, 0.04), 0 4px 6px rgba(0, 0, 0, 0.04);
-$hoverShadow: 0 4px 8px #00000015;
-$defaultShadow: 0 4px 4px #00000015;
-$layerShadow: 0 1px 5px 0 #0000001a;
-$tileShadow: 0 1px 0.5px #0000001a;
+$shadowInset: inset 1px 1px 1px $shadowColor3;
+$popoverShadow: 0 10px 40px $shadowColor5;
+$shadowTop: 0 -3px 10px $shadowColor5;
+$shadowBottom: 0 3px 10px $shadowColor5;
+$inputContainerShadow: 0 2px 4px $shadowColor4, 0 4px 6px $shadowColor4;
+$hoverShadow: 0 4px 8px $shadowColor8;
+$defaultShadow: 0 4px 4px $shadowColor8;
+$layerShadow: 0 1px 5px 0 $shadowColor10;
+$tileShadow: 0 1px 0.5px $shadowColor10;
+$modeShadow: 0 3px 5px -1px $shadowColor8, 0 6px 10px 0 $shadowColor10, 0 1px 18px 0 $shadowColor10;
