refactor(Merge): Merging branch 'keriat-zkf-486-design-issues' into dev
## Step #4 of 4

> In addition couple of things where either added or fixed

 * Beta / Network data added
 * Stored the version of the zksync.js library used
 * Multiple things are fixed in terms of UI/UX
 * compilation errors dodged (hopefully 😏)

--- a/src/assets/style/blocks/_footer.scss
+++ b/src/assets/style/blocks/_footer.scss
@@ -19,6 +19,12 @@ footer {
     }
   }
 
+  @media screen and (max-width: $mobile) {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+  }
+
   &.mainFooter {
     width: 100%;
 
@@ -27,6 +33,7 @@ footer {
     }
 
     & > div {
+
       @media (max-width: $mobile) {
         flex-direction: column-reverse !important;
       }
@@ -72,9 +79,8 @@ footer {
       }
 
       @media (max-width: $mobile) {
-        right: 8vw;
-        bottom: 6rem;
-        //bottom: 80px;
+        bottom: 110px;
+        right: 10px;
       }
     }
   }
