--- a/src/assets/style/_mobile-layout.scss
+++ b/src/assets/style/_mobile-layout.scss
@@ -11,11 +11,6 @@
     margin: 0;
   }
 
-  .header,
-  .content,
-  .footer {
-  }
-
   header {
     background-color: #222327;
     display: flex;
@@ -31,7 +26,7 @@
   section.bn-onboard-custom.bn-onboard-modal-content.svelte-rntogh {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     gap: 0.5rem;
     padding: 1rem;
     border-radius: 8px !important;
@@ -47,6 +42,23 @@
     align-items: flex-end;
   }
 
+  #__layout
+  {
+    display: flex;
+    flex-direction: column;
+    max-width: 100vh !important;
+    overflow: hidden;
+
+    main
+    {
+      padding: $headerHeight 0 $footerHeight;
+    }
+  }
+
+  #__nuxt {
+    overflow: hidden;
+  }
+
   #__nuxt,
   #__layout,
   .layoutContent,
@@ -55,9 +67,6 @@
     min-height: 100vh !important;
   }
 
-  #__layout {
-    overflow: hidden;
-  }
 
   main.layout.indexLayout {
     display: flex;
@@ -70,36 +79,17 @@
     line-height: 1.4;
   }
 
-  footer.layout-footer._padding-top-1.mainFooter {
+  footer.layout-footer {
     min-height: 80px;
+    background: transparent;
   }
 
   header.indexHeader {
     min-height: 80px;
-  }
-
-
-  footer.layout-footer._padding-top-1.mainFooter {
-    min-height: 80px;
-  }
-
-  header.indexHeader {
-    min-height: 80px;
-  }
-
-  #__layout,
-  #__nuxt {
-    max-height: 100vh !important;
-    overflow: hidden;
   }
 
   main > div.mobileOnly {
     display: none;
-  }
-
-  #__layout {
-    max-width: 100vh !important;
-    overflow: hidden;
   }
 
 
@@ -164,9 +154,6 @@
     height: 100vh;
   }
 
-  footer.layout-footer._padding-top-1.mainFooter {
-    background: transparent;
-  }
 
   aside.bn-onboard-custom.bn-onboard-modal {
     section.bn-onboard-custom.bn-onboard-modal-content {
@@ -180,18 +167,26 @@
   }
 
   section.layoutContent {
-    margin: 0 0 80px;
-
-
     .mobileOnly {
       display: none !important;
     }
   }
 
 
+  .layout-content.layoutContent {
+    min-height: auto !important;
+    position: initial !important;
+    flex: initial;
+    flex-direction: column;
+    height: auto;
+    align-items: stretch;
+    display: flex;
+    justify-content: stretch;
 
-  header.layout-header.loggedInHeader {
-    position: initial;
+    .routerContainer {
+      min-height: 0;
+      margin: 1rem auto;
+    }
   }
 
 }
